...
              },
              started: false,
            });
          }}
        />
        <ListItem
          testID="setup-intent-button"
          title="Store card via Setup Intents"
          onPress={() => {
            navigation.navigate('SetupIntentScreen', {
              discoveryMethod,
            });
          }}
        />
        <ListItem
          testID="in-person-refund-button"
          title="In-Person Refund"
          onPress={() => {
            navigation.navigate('RefundPaymentScreen', {
              simulated,
              discoveryMethod,
            });
...
