...

      <List title="TARGET VERSION">
        <ListItem title={updateInfo?.deviceSoftwareVersion ?? ""} />
      </List>

      <List>
        <ListItem title="Required update in progress" />
      </List>
      <View style={styles.row}>
        <Text style={styles.info}>Update progress: {currentProgress}%</Text>
        <Text style={styles.info}>
          The reader will temporarily become unresponsive. Do not leave this
          page, and keep the reader in range and powered on until the update is
...
