appId: ${APP_ID}
---
- scrollUntilVisible:
    element:
      id: "in-person-refund-button"
- tapOn:
    id: "in-person-refund-button"

- extendedWaitUntil:
    visible:
      id: "charge-id-text-field"
    timeout: 20000

- tapOn:
    id: "charge-id-text-field"
- inputText: "ch_3JxsjUBDuqlYGNW21EL8UyOm"

- runFlow:
    when:
      platform: android
    commands:
      - hideKeyboard

- extendedWaitUntil:
    visible:
      id: "amount-text-field"
    timeout: 20000

- tapOn:
    id: "amount-text-field"
- inputText: "20000"

- scrollUntilVisible:
    element:
      id: "collect-refund-button"
- tapOn:
    id: "collect-refund-button"

- scrollUntilVisible:
    element:
      id: "Processing"
- scrollUntilVisible:
    element:
      id: "Failed"
